tests/k8s_testcases/example_policies/workload-resources-test/file-system-resource-test-scheme.yaml
namespaceList: ../../../example_workload_resources/
podList: ../../../example_workload_resources/

networkConfigList:
  - name: workload_resources_captured
    networkPolicyList:
      - workload-test-networkpolicy.yaml
    expectedWarnings: 0

queries:
  - name: all-captured
    allCaptured:
      - workload_resources_captured
    expected: 44

  - name: all-captured-2
    allCaptured:
      - workload_resources_captured
    outputConfiguration:
      outputEndpoints: pods
    expected: 68
