tests/k8s_testcases/example_policies/workload-resources-test/git-resource-test-scheme.yaml
namespaceList: https://github.com/np-guard/network-config-analyzer/tree/master/tests/example_workload_resources/
podList: https://github.com/np-guard/network-config-analyzer/tree/master/tests/example_workload_resources/

networkConfigList:
  - name: workload_resources_captured
    networkPolicyList:
      - workload-test-networkpolicy.yaml
    expectedWarnings: 0

queries:
  - name: all-captured
    allCaptured:
      - workload_resources_captured
    expected: 44
