tests/k8s_testcases/example_policies/workload-resources-test/workload-test-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: capture-all-ingress-default
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
